--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "node":"8.1.4",
   "license": "MIT",
-  "author": "patrick.triest@gmail.com",
-  "description": "End-to-end RSA-256 encrypted chat application.",
+  "author": "securityops@riseup.net",
+  "description": "End-to-end RSA-2048 encrypted chat application.",
   "main": "app.js",
   "engines": {
     "node": ">=7.6"
@@ -14,6 +14,6 @@
   },
   "dependencies": {
     "express": "4.15.3",
-    "socket.io": "2.0.3"
+    "socket.io": "2.4.0"
   }
 }
